--- a/finance-frontend/index.html
+++ b/finance-frontend/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>finance-frontend</title>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>  ← ADD THIS
   </head>
   <body>
     <div id="root"></div>
